--- a/js_frameworks/angular-demo/src/app/app.component.html
+++ b/js_frameworks/angular-demo/src/app/app.component.html
@@ -177,6 +177,7 @@
   }
 </style>
 
+<button (click)="hello()">Say Hello</button>
 <main class="main">
   <div class="content">
     <div class="left-side">
